# Rust-Actix-auth-cookie

./: .env  Cargo.toml  readme.md  reaeme.md
migrations/2020-11-17-110321_create_directory/: down.sql  up.sql
public/: index.html
src/: main.rs  models.rs  schema.rs
