[package]
name = "auth"
version = "0.1.0"
authors = ["letitride <ichikawa.fumiya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "1"
actix-identity = "0.3"
env_logger = "0.8"
log = "0.4"
rand = "0.7"
serde = { version = "1", features = ["derive"] }
dotenv = "0.15"
chrono = "0.4"
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }

